[gd_scene load_steps=16 format=3 uid="uid://bd7upt7hgbq6c"]

[ext_resource type="Script" uid="uid://brabc1ahe7dy5" path="res://scenes/third_person.gd" id="1_3xrgj"]
[ext_resource type="Script" uid="uid://n8blyodjwbxs" path="res://scenes/rotation_component.gd" id="2_f743c"]
[ext_resource type="Script" uid="uid://dhpnacfjofxaj" path="res://scenes/vertival_component.gd" id="2_hyabu"]
[ext_resource type="AudioStream" uid="uid://duf1i82r8ul6m" path="res://audio/speed_up.wav" id="2_vurlo"]
[ext_resource type="Shader" uid="uid://c154elpe4xn2b" path="res://shaders/third_person.gdshader" id="4_h6acs"]
[ext_resource type="PackedScene" uid="uid://clb36j20eu85p" path="res://scenes/vertival_component_v2.tscn" id="5_dl8so"]
[ext_resource type="Script" uid="uid://bjpmu5sklv5h8" path="res://audio/raytraced_audio_listener.gd" id="6_x45r8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h6acs"]
blend_mode = 1
albedo_color = Color(0.533037, 0.533037, 0.533037, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pg6is"]

[sub_resource type="SphereMesh" id="SphereMesh_pg6is"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a3bf3"]
render_priority = 0
shader = ExtResource("4_h6acs")
shader_parameter/hand = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h6acs"]
render_priority = 0
shader = ExtResource("4_h6acs")
shader_parameter/hand = 0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w0x8w"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_h6acs"]

[sub_resource type="MultiMesh" id="MultiMesh_x45r8"]
transform_format = 1
instance_count = 1
mesh = SubResource("CapsuleMesh_h6acs")
buffer = PackedFloat32Array(2.10195e-44, 2.10195e-44, 1.4013e-45, 0, 2.24208e-44, 3.08286e-44, 2.38221e-44, 2.24208e-44, 3.22299e-44, 3.08286e-44, 2.38221e-44, 2.94273e-44)

[node name="third_person" type="Node3D"]
script = ExtResource("1_3xrgj")
highlight = SubResource("StandardMaterial3D_h6acs")

[node name="pawn" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_pg6is")

[node name="plane_2d" parent="pawn" instance=ExtResource("5_dl8so")]
active_on = 2

[node name="VerticalComponent" type="Node" parent="pawn"]
script = ExtResource("2_hyabu")
active_on = 2
metadata/_custom_type_script = "uid://dhpnacfjofxaj"

[node name="RotationComponent" type="Node" parent="pawn"]
script = ExtResource("2_f743c")
active_on = 1
speed = null
metadata/_custom_type_script = "uid://n8blyodjwbxs"

[node name="right" type="Node3D" parent="pawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.75, -1.2)

[node name="mesh" type="MeshInstance3D" parent="pawn/right"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, -0.5)
gi_mode = 2
mesh = SubResource("SphereMesh_pg6is")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_a3bf3")

[node name="plane_2d" parent="pawn/right" instance=ExtResource("5_dl8so")]
active_on = 2

[node name="left" type="Node3D" parent="pawn"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.389956, 0.75, -1.2)

[node name="mesh" type="MeshInstance3D" parent="pawn/left"]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, -0.5)
gi_mode = 2
mesh = SubResource("SphereMesh_pg6is")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_h6acs")

[node name="plane_2d" parent="pawn/left" instance=ExtResource("5_dl8so")]
active_on = 2

[node name="RigidBody3D" type="RigidBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0187894, -0.0167265, -0.0124032)
shape = SubResource("CapsuleShape3D_w0x8w")

[node name="speed_timer" type="Timer" parent="."]
one_shot = true

[node name="fonk_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vurlo")
volume_db = -3.0

[node name="MultiMeshInstance3D" type="MultiMeshInstance3D" parent="."]
multimesh = SubResource("MultiMesh_x45r8")

[node name="RaytracedAudioListener" type="AudioListener3D" parent="."]
script = ExtResource("6_x45r8")
is_enabled = null
auto_update = null
rays_count = null
max_raycast_dist = null
max_bounces = null
ray_scatter_model = null
muffle_enabled = null
muffle_interpolation = null
echo_enabled = null
echo_room_size_multiplier = null
echo_interpolation = null
ambient_enabled = null
ambient_pan_interpolation = null
ambient_pan_strength = null
ambient_volume_interpolation = null
ambient_volume_attenuation = null
metadata/_custom_type_script = "uid://bjpmu5sklv5h8"
